kubernetes/applications/media/radarr/cloudflare-tunnel-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-cloudflare
  namespace: media
  labels:
    app: radarr
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: radarr.kernow.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 7878
